Apply 5_1_jdk_11.patch